--- a/taskForMySelf/moreInfo/index.html
+++ b/taskForMySelf/moreInfo/index.html
@@ -6,6 +6,17 @@
 </head>
 <body>
 
+
+https://developer.mozilla.org/ru/docs/Learn/Forms/Your_first_form
+<form>
+    <input name="login" placeholder="Логин" value="">
+    <input name="pass" type="password" placeholder="Пароль">
+    <input type="submit" value="Вход">
+</form>
+
+
+
+DOM element attribute
 <script>
     btn.onclick = () => {
         let element = document.getElementById('text');
