add compendium_10 and compendium_11

--- a/lesson_10/compendium/index.html
+++ b/lesson_10/compendium/index.html
@@ -68,8 +68,10 @@ addEventListener - позволит добавить несколько реак
         this.style.background = `rgb(${x},${y},${x - y})`;
     };
 </script>
-- EventObject - объект с множеством данных. Инициализируется самостоятельно, достаточно лишь передать его в функцию. Имя/название может быть произвольное.
-(Дать картинку Объекта события)
+- EventObject - объект с множеством данных.
+Инициализируется самостоятельно, достаточно лишь передать его в функцию.
+Имя/название может быть произвольное.
+(Дать картинку Объекта события) - не надо, не давай. Пожалуйста!
 
 --------------------------------------------------------------------------------------------------
 
@@ -116,6 +118,7 @@ addEventListener - позволит добавить несколько реак
         let age = this.age.value;
         let status = this.status.checked;
         console.log({name: name, age: age, status: status});
+        // console.log({name, age, status});   //Сокращенная запись
     };
 </script>
 
