add classWork and homeWork_11

--- a/lesson_11/classWork/index.html
+++ b/lesson_11/classWork/index.html
@@ -6,5 +6,50 @@
 </head>
 <body>
 
+<script>
+    let users = [
+        {name: 'vasya', age: 31, status: false},
+        {name: 'petya', age: 30, status: true},
+        {name: 'kolya', age: 29, status: true},
+        {name: 'olya', age: 28, status: false},
+        {name: 'max', age: 30, status: true},
+        {name: 'anya', age: 31, status: false},
+        {name: 'oleg', age: 28, status: false},
+        {name: 'andrey', age: 29, status: true},
+        {name: 'masha', age: 30, status: true},
+        {name: 'olya', age: 31, status: false},
+        {name: 'max', age: 31, status: true}
+    ];
+    // створити під кожен об'єкт массива свій блок з конопкою "додати до улюблених"
+    // при натисканні на яку об'єкт потрапляє до масиву favorites улюблених обраних об'єктів в локальному сховищі.
+    // Створити сторніку favorites.html при переході на яку потрібно вивест в документ всіх обраних на попередньому етапі.
+
+    function isDuplicate (arrayOfObject, newObject) {
+        for (let arrayObject of arrayOfObject) {
+            if (JSON.stringify(arrayObject) === JSON.stringify(newObject)) {
+                return true;
+            }
+        }
+    }
+
+    for (let user of users) {
+        let div = document.createElement('div');
+        div.innerText = JSON.stringify(user);
+        document.body.appendChild(div);
+        let button = document.createElement('button');
+        button.innerText = 'add';
+        div.appendChild(button);
+        button.onclick = () => {
+            let parse = JSON.parse(localStorage.getItem('favorites'));
+            let favorites = parse || [];
+            if (isDuplicate(favorites, user)) {
+                return;
+            }
+            favorites.push(user);
+            let stringify = JSON.stringify(favorites);
+            localStorage.setItem('favorites', stringify);
+        }
+    }
+</script>
 </body>
 </html>
