--- a/lesson_11/homeWork/index.html
+++ b/lesson_11/homeWork/index.html
@@ -6,5 +6,86 @@
 </head>
 <body>
 
+<script>
+    // - Створити форму з інпутами для name та age.
+    // При відправці форми записати об'єкт в localstorage
+
+    // let form = document.createElement("form");
+    // form.name = 'userForm';
+    // document.body.appendChild(form);
+    //
+    // let age = document.createElement('input');
+    // age.name = 'ageInput';
+    // age.type = 'number';
+    // age.placeholder = 'age';
+    // form.appendChild(age);
+    //
+    // let name = document.createElement('input');
+    // name.name = 'nameInput';
+    // name.type = 'text';
+    // name.placeholder = 'name';
+    // form.appendChild(name);
+    //
+    // let button = document.createElement('button');
+    // button.name = 'button';
+    // button.innerText = 'add';
+    // form.appendChild(button);
+    //
+    // form.onsubmit = (event) => {
+    //     event.preventDefault();
+    //     let object = {age: form.ageInput.value, name: form.nameInput.value};
+    //     form.ageInput.value = '';
+    //     form.nameInput.value = '';
+    //     let stringify = JSON.stringify(object);
+    //     localStorage.setItem('user', stringify);
+    // }
+
+
+
+    // - Створити форму з інпутами для model,type та volume автівки.
+    // При відпарвці форми об'єкти зберігаються в масиві в локальному сховищі.
+
+    // let form = document.createElement("form");
+    // form.name = 'carsForm';
+    // document.body.appendChild(form);
+    //
+    // let modelInput = document.createElement('input');
+    // modelInput.name = 'modelInput';
+    // modelInput.type = 'text';
+    // modelInput.placeholder = 'model';
+    // form.appendChild(modelInput);
+    //
+    // let typeInput = document.createElement('input');
+    // typeInput.name = 'typeInput';
+    // typeInput.type = 'text';
+    // typeInput.placeholder = 'type';
+    // form.appendChild(typeInput);
+    //
+    // let volumeInput = document.createElement('input');
+    // volumeInput.name = 'volumeInput';
+    // volumeInput.type = 'number';
+    // volumeInput.placeholder = 'volume';
+    // form.appendChild(volumeInput);
+    //
+    // let button = document.createElement('button');
+    // button.name = 'button';
+    // button.innerText = 'add';
+    // form.appendChild(button);
+    //
+    // form.onsubmit = (event) => {
+    //     event.preventDefault();
+    //     let car = {model: modelInput.value, type: typeInput.value, volume: volumeInput.value};
+    //     modelInput.value = '';
+    //     typeInput.value = '';
+    //     volumeInput.value = '';
+    //
+    //     let parse = JSON.parse(localStorage.getItem('cars'));
+    //     let cars = parse || [];
+    //     cars.push(car);
+    //     let stringify = JSON.stringify(cars);
+    //     localStorage.setItem('cars', stringify);
+    // }
+
+</script>
 </body>
 </html>
