--- a/lesson_12/compendium/index.html
+++ b/lesson_12/compendium/index.html
@@ -5,7 +5,7 @@
     <title>Lesson 12</title>
 </head>
 <body>
-Lection 12 API - JSONPlaceholder
+Lesson 12          API - JSONPlaceholder
 
 // Application Programming Interface
 
@@ -92,9 +92,11 @@ https://jsonplaceholder.typicode.com
 
 //Пример загрузки контента из АПИ по выбору селектора
 
-<select id="page">          //Выпадающее окно выбора
-    <option value="1">page 1</option>   //Вариант 1
-    <option value="2">page 2</option>   //Вариант 2
+<select id="page"> //Выпадающее окно выбора
+    <option value="1">page 1</option>
+    //Вариант 1
+    <option value="2">page 2</option>
+    //Вариант 2
 </select>
 
 <div class="wrap"></div>
