--- a/lesson_12/additional/index.html
+++ b/lesson_12/additional/index.html
@@ -37,52 +37,65 @@
                     item.style.margin = '0px';
                     item.innerText = key + ' : ' + user[key];
                     userInfo.appendChild(item);
+                }
 
-                    // button.onclick = () => {
-                    //     console.log('user BTN is click');
-                    //     fetch(`https://jsonplaceholder.typicode.com/comments?postId=${user.id}`)
-                    //         .then(response => response.json())
-                    //         .then(comments => {
-                    //             console.log(comments);
-                    //             userPosts.innerText = '';
-                    //             for (const comment of comments) {
-                    //                 let commentDiv = document.createElement('div');
-                    //                 commentDiv.style.borderTop = '5px dashed';
-                    //                 userPosts.appendChild(commentDiv);
-                    //                 for (const key in comment) {
-                    //                     let item = document.createElement('p');
-                    //                     item.innerText = key + ' : ' + comment[key];
-                    //                     commentDiv.appendChild(item);
-                    //                 }
-                    //             }
-                    //         })
-                    // }
+                button.onclick = () => {
+                    console.log('BTN user - ' + user.id);
 
-                    button.onclick = getPosts(user.id, userPosts);
+                    fetch(`https://jsonplaceholder.typicode.com/users/${user.id}/posts`)
+                        .then(response => response.json())
+                        .then(posts => {
+                            userPosts.innerText = '';
+
+                            for (const post of posts) {
+                                let postDiv = document.createElement('div');
+                                postDiv.style.borderTop = '5px dashed';
+                                userPosts.appendChild(postDiv);
+
+                                let postInfo = document.createElement('div');
+                                postDiv.appendChild(postInfo);
+
+                                let button = document.createElement('button');
+                                button.innerText = 'more';
+                                postDiv.appendChild(button);
+
+                                let postComments = document.createElement('div');
+                                postDiv.appendChild(postComments);
+
+                                for (const key in post) {
+                                    let item = document.createElement('p');
+                                    item.innerText = key + ' : ' + post[key];
+                                    postInfo.appendChild(item);
+                                }
+
+                                button.onclick = () => {
+                                    console.log('BTN post - ' + post.id);
+
+                                    fetch(`https://jsonplaceholder.typicode.com/posts/${post.id}/comments`)
+                                        .then(response => response.json())
+                                        .then(comments => {
+                                            postComments.innerText = '';
+
+                                            for (const comment of comments) {
+                                                let commentDiv = document.createElement('div');
+                                                commentDiv.style.borderTop = '5px dotted';
+                                                postComments.appendChild(commentDiv);
+
+                                                for (const key in comment) {
+                                                    let item = document.createElement('p');
+                                                    item.style.margin = '0px';
+                                                    item.innerText = key + ' : ' + comment[key];
+                                                    commentDiv.appendChild(item);
+                                                }
+                                            }
+                                        });
+                                }
+                            }
+                        })
                 }
             }
-
         });
 
-    function getPosts(userId, userPosts) {
-        console.log('user BTN is click');
-        fetch(`https://jsonplaceholder.typicode.com/comments?postId=${userId}`)
-            .then(response => response.json())
-            .then(posts => {
-                console.log('Posts is ' + posts);
-                userPosts.innerText = '';
-                for (const post of posts) {
-                    let postDiv = document.createElement('div');
-                    postDiv.style.borderTop = '5px dashed';
-                    userPosts.appendChild(postDiv);
-                    for (const key in post) {
-                        let item = document.createElement('p');
-                        item.innerText = key + ' : ' + post[key];
-                        postDiv.appendChild(item);
-                    }
-                }
-            })
-    }
 </script>
 
 <!--Запрос пользователей-->
